fixed menu scrollbar appearing in chrome/edge

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -44,7 +44,8 @@ header {
     nav {
         ul {
 					padding: 0;
-            list-style-type: none;
+					list-style-type: none;
+					overflow: hidden;
             li {
                 display: inline;
             }
